[metadata]
name = earwax-server
description = A Python module for making event-driven line servers for use with Earwax
description-file = README.md
description-content-type = text/markdown
home-page = http://earwax.readthedocs.io/
author = Chris Norman
author-email = chris.norman2@googlemail.com
license = MPL

[tool:pytest]
testpaths = "tests"
addopts = "-xq"

[flake8]
exclude = env, .eggs, build

[build_sphinx]
builders = html
source-dir = docs/source
build-dir = docs/build
all-files = 1

[entry_points]
console_scripts =
    earwax = earwax:cmd_main
